# CMake-VCPKG-Template

./: CMakeLists.txt  README.md  setup.ps1  setup.sh  vcpkg.json
scripts/: config-schema.json  config.json
scripts/cmake/: constants.cmake
scripts/cmake/common/: setup.cmake
scripts/cmake/project/: setup.cmake
scripts/cmake/tools/: documentation.cmake  lint.cmake
scripts/cmake/vcpkg/: setup_triplet.cmake  vcpkg.cmake
scripts/dev/: env.sh
scripts/python/: wizard.py
scripts/windows/: clang_build.ps1  cmake.bat  env.ps1  functions.ps1  project.ps1  python.bat  vars.ps1  workspace.bat
